--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<!-- boton que desliza para arriba -->
+
+<span class="arriba bx bxs-up-arrow"></span>
+<!-- Fin del boton que desliza para arriba -->
+
 <div class="case-studies-section wf-section">
   <div class="wrapper project-slider">
     <div
@@ -240,6 +245,8 @@
     </div>
   </div>
 </div>
+<!-- ========== Inicio del bloG========== -->
+
 <div class="blog-section wf-section">
   <div class="wrapper blog-homepage">
     <div class="blog-heading-and-subtext-wrapper">
@@ -250,7 +257,7 @@
         <h2 class="white blogs">Latest Blogs</h2>
       </div>
       <a href="/blog" class="blog-item-read-the-article-wrapper w-inline-block">
-        <div class="blog-item-read-the-article-text-wrapper">
+        <div class="loadindroedor">
           <!-- ========== Roedor ========== -->
 
           <div
