--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -247,7 +247,7 @@
 </div>
 <!-- ========== Inicio del bloG========== -->
 
-<div class="blog-section wf-section">
+<div class="blog-section wf-section" style="background: #f0e68c">
   <div class="wrapper blog-homepage">
     <div class="blog-heading-and-subtext-wrapper">
       <div class="blog-subtext-wrapper">
