--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -254,39 +254,38 @@
         <h6>Blogs</h6>
       </div>
       <div class="blog-heading-wrapper">
-        <h2 class="white blogs">Latest Blogs</h2>
+        <h2>Latest Blogs</h2>
       </div>
-      <a href="/blog" class="blog-item-read-the-article-wrapper w-inline-block">
-        <div class="loadindroedor">
-          <!-- ========== Roedor ========== -->
+      <br />
+      <div class="loadindroedor">
+        <!-- ========== Roedor ========== -->
 
-          <div
-            aria-label="Orange and tan hamster running in a metal wheel"
-            role="img"
-            class="wheel-and-hamster"
-            style="width: 25em; height: 25em"
-          >
-            <div class="wheel"></div>
-            <div class="hamster" style="top: 19em">
-              <div class="hamster__body">
-                <div class="hamster__head">
-                  <div class="hamster__ear"></div>
-                  <div class="hamster__eye"></div>
-                  <div class="hamster__nose"></div>
-                </div>
-                <div class="hamster__limb hamster__limb--fr"></div>
-                <div class="hamster__limb hamster__limb--fl"></div>
-                <div class="hamster__limb hamster__limb--br"></div>
-                <div class="hamster__limb hamster__limb--bl"></div>
-                <div class="hamster__tail"></div>
+        <div
+          aria-label="Orange and tan hamster running in a metal wheel"
+          role="img"
+          class="wheel-and-hamster"
+          style="width: 25em; height: 25em"
+        >
+          <div class="wheel"></div>
+          <div class="hamster" style="top: 19em">
+            <div class="hamster__body">
+              <div class="hamster__head">
+                <div class="hamster__ear"></div>
+                <div class="hamster__eye"></div>
+                <div class="hamster__nose"></div>
               </div>
+              <div class="hamster__limb hamster__limb--fr"></div>
+              <div class="hamster__limb hamster__limb--fl"></div>
+              <div class="hamster__limb hamster__limb--br"></div>
+              <div class="hamster__limb hamster__limb--bl"></div>
+              <div class="hamster__tail"></div>
             </div>
-            <div class="spoke"></div>
           </div>
-
-          <!-- ========== Fin del roedor========== -->
+          <div class="spoke"></div>
         </div>
-      </a>
+
+        <!-- ========== Fin del roedor========== -->
+      </div>
     </div>
     <div class="blog-content-wrapper">
       <div class="w-dyn-list">
@@ -298,29 +297,25 @@
               class="blog-section-blog-item-wrapper w-inline-block"
             >
               <div class="blog-item-date-and-time-wrapper">
-                <div class="blog-item-date-wrapper">
-                  <div class="text-block _14px white">April 16, 2021</div>
+                <div>
+                  <div class="text-block">April 16, 2021</div>
                 </div>
                 <div class="blog-item-dot"></div>
                 <div class="blog-item-time-wrapper">
-                  <div class="text-block _14px white">6 mins</div>
+                  <div class="text-block">6 mins</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
-                <h4 class="white">
+                <h4>
                   Design tips for designers, that cover everything you need
                 </h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
                 <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block _18px white">Read the article</div>
+                  <div class="text-block">Read the article</div>
                 </div>
                 <div class="blog-item-arrow-wrapper">
-                  <img
-                    src="https://assets.website-files.com/5fef5619b640934b33c2385e/5fef584aacad011eafeb61bc_Vector-2.svg"
-                    loading="lazy"
-                    alt=""
-                  />
+                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
                 </div>
               </div>
             </a>
@@ -333,21 +328,22 @@
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
-                  <div class="text-block _14px white">April 16, 2021</div>
+                  <div class="text-block">April 16, 2021</div>
                 </div>
                 <div class="blog-item-dot"></div>
                 <div class="blog-item-time-wrapper">
-                  <div class="text-block _14px white">5 mins</div>
+                  <div class="text-block">5 mins</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
-                <h4 class="white">
-                  How to build rapport with your web design clients
-                </h4>
+                <h4>How to build rapport with your web design clients</h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
                 <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block _18px white">Read the article</div>
+                  <div class="text-block">Read the article</div>
+                </div>
+                <div class="blog-item-arrow-wrapper">
+                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
                 </div>
               </div>
             </a>
@@ -360,26 +356,22 @@
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
-                  <div class="text-block _14px white">April 16, 2021</div>
+                  <div class="text-block">April 16, 2021</div>
                 </div>
                 <div class="blog-item-dot"></div>
                 <div class="blog-item-time-wrapper">
-                  <div class="text-block _14px white">5 mins</div>
+                  <div class="text-block">5 mins</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
-                <h4 class="white">Top 6 free website mockup tools 2021</h4>
+                <h4>Top 6 free website mockup tools 2021</h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
                 <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block _18px white">Read the article</div>
+                  <div class="text-block">Read the article</div>
                 </div>
                 <div class="blog-item-arrow-wrapper">
-                  <img
-                    src="https://assets.website-files.com/5fef5619b640934b33c2385e/5fef584aacad011eafeb61bc_Vector-2.svg"
-                    loading="lazy"
-                    alt=""
-                  />
+                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
                 </div>
               </div>
             </a>
@@ -392,26 +384,22 @@
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
-                  <div class="text-block _14px white">April 16, 2021</div>
+                  <div class="text-block">April 16, 2021</div>
                 </div>
                 <div class="blog-item-dot"></div>
                 <div class="blog-item-time-wrapper">
-                  <div class="text-block _14px white">7 mins</div>
+                  <div class="text-block">7 mins</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
-                <h4 class="white">Logo design trends to avoid in 2021</h4>
+                <h4>Logo design trends to avoid in 2021</h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
                 <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block _18px white">Read the article</div>
+                  <div class="text-block">Read the article</div>
                 </div>
                 <div class="blog-item-arrow-wrapper">
-                  <img
-                    src="https://assets.website-files.com/5fef5619b640934b33c2385e/5fef584aacad011eafeb61bc_Vector-2.svg"
-                    loading="lazy"
-                    alt=""
-                  />
+                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
                 </div>
               </div>
             </a>
@@ -424,26 +412,22 @@
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
-                  <div class="text-block _14px white">April 16, 2021</div>
+                  <div class="text-block">April 16, 2021</div>
                 </div>
                 <div class="blog-item-dot"></div>
                 <div class="blog-item-time-wrapper">
-                  <div class="text-block _14px white">7 mins</div>
+                  <div class="text-block">7 mins</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
-                <h4 class="white">22 best UI design tools</h4>
+                <h4>22 best UI design tools</h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
                 <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block _18px white">Read the article</div>
+                  <div class="text-block">Read the article</div>
                 </div>
                 <div class="blog-item-arrow-wrapper">
-                  <img
-                    src="https://assets.website-files.com/5fef5619b640934b33c2385e/5fef584aacad011eafeb61bc_Vector-2.svg"
-                    loading="lazy"
-                    alt=""
-                  />
+                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
                 </div>
               </div>
             </a>
