--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -2,167 +2,332 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-  /*background-image: url(../images/bg4.jpg);*/
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
   background: #f0e68c;
 }
 
-main {
-  width: 100%;
-  padding: 20px;
-  margin: auto;
-  margin-top: 100px;
-}
-
-.contenedor__todo {
-  width: 100%;
-  max-width: 800px;
-  margin: auto;
+.container {
   position: relative;
-}
-
-.caja__trasera {
-  width: 100%;
-  padding: 10px 20px;
-  display: flex;
-  justify-content: center;
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  background-color: rgba(0, 128, 255, 0.5);
-}
-
-.caja__trasera div {
-  margin: 100px 40px;
-  color: white;
-  transition: all 500ms;
-}
-
-.caja__trasera div p,
-.caja__trasera button {
-  margin-top: 30px;
-}
-
-.caja__trasera div h3 {
-  font-weight: 400;
-  font-size: 26px;
-}
-
-.caja__trasera div p {
-  font-size: 16px;
-  font-weight: 300;
-}
-
-.caja__trasera button {
-  padding: 10px 40px;
-  border: 2px solid #fff;
-  font-size: 14px;
-  background: transparent;
-  font-weight: 600;
-  cursor: pointer;
-  color: white;
-  outline: none;
-  transition: all 300ms;
-}
-
-.caja__trasera button:hover {
+  width: 70vw;
+  height: 80vh;
   background: #fff;
-  color: #46a2fd;
+  border-radius: 15px;
+  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+  overflow: hidden;
 }
 
-/*Formularios*/
+.container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -50%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(142, 202, 230, 1) 47%,
+    rgba(34, 145, 195, 1) 82%
+  );
+  z-index: 6;
+  transform: translateX(100%);
+  transition: 1s ease-in-out;
+}
 
-.contenedor__login-register {
+.signin-signup {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
-  width: 100%;
-  max-width: 380px;
-  position: relative;
-  top: -185px;
-  left: 10px;
-
-  /*La transicion va despues del codigo JS*/
-  transition: left 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  justify-content: space-around;
+  z-index: 5;
 }
 
-.contenedor__login-register form {
-  width: 100%;
-  padding: 80px 20px;
-  background: white;
-  position: absolute;
-  border-radius: 20px;
+form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 40%;
+  min-width: 238px;
+  padding: 0 10px;
 }
 
-.contenedor__login-register form h2 {
-  font-size: 30px;
-  text-align: center;
-  margin-bottom: 20px;
-  color: #46a2fd;
-}
-
-.contenedor__login-register form input {
-  width: 100%;
-  margin-top: 20px;
-  padding: 10px;
-  border: none;
-  background: #f2f2f2;
-  font-size: 16px;
-  outline: none;
-}
-
-.contenedor__login-register form button {
-  padding: 10px 40px;
-  margin-top: 40px;
-  border: none;
-  font-size: 14px;
-  background: #46a2fd;
-  font-weight: 600;
-  cursor: pointer;
-  color: white;
-  outline: none;
-}
-
-.formulario__login {
+form.sign-in-form {
   opacity: 1;
-  display: block;
+  transition: 0.5s ease-in-out;
+  transition-delay: 1s;
 }
-.formulario__register {
+
+form.sign-up-form {
+  opacity: 0;
+  transition: 0.5s ease-in-out;
+  transition-delay: 1s;
+}
+
+.title {
+  font-size: 35px;
+  color: #023047;
+  margin-bottom: 10px;
+}
+
+.input-field {
+  width: 100%;
+  height: 50px;
+  background: #f0f0f0;
+  margin: 10px 0;
+  border: 2px solid #219ebc;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.input-field i {
+  flex: 1;
+  text-align: center;
+  color: #666;
+  font-size: 18px;
+}
+
+.input-field input {
+  flex: 5;
+  background: none;
+  border: none;
+  outline: none;
+  width: 100%;
+  font-size: 18px;
+  font-weight: 600;
+  color: #444;
+}
+
+.btn {
+  width: 150px;
+  height: 50px;
+  border: none;
+  border-radius: 50px;
+  --arrow-width: 10px;
+  --arrow-stroke: 2px;
+  background: #645bff;
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: 0.2s background;
+  align-items: center;
+  gap: 0.6em;
+  font-weight: bold;
+  box-sizing: border-box;
+}
+button:hover .arrow {
+  background: #fff;
+}
+
+button:hover .arrow:before {
+  right: 0;
+}
+button .arrow-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+button .arrow {
+  margin-top: 1px;
+  width: var(--arrow-width);
+  background: #645bff;
+  height: var(--arrow-stroke);
+  position: relative;
+  transition: 0.2s;
+}
+
+button .arrow::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  border: solid #fff;
+  border-width: 0 var(--arrow-stroke) var(--arrow-stroke) 0;
+  display: inline-block;
+  top: -3px;
+  right: 3px;
+  transition: 0.2s;
+  padding: 3px;
+  transform: rotate(-45deg);
+}
+
+.btn:hover {
+  background: #c03cc0;
+}
+
+.social-text {
+  margin: 10px 0;
+  font-size: 16px;
+}
+
+.social-media {
+  display: flex;
+  justify-content: center;
+}
+
+.social-icon {
+  height: 45px;
+  width: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #444;
+  border: 1px solid #444;
+  border-radius: 50px;
+  margin: 0 5px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.social-icon:hover {
+  color: #df4adf;
+  border-color: #df4adf;
+}
+
+.panels-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 35%;
+  min-width: 238px;
+  padding: 0 10px;
+  text-align: center;
+  z-index: 6;
+}
+
+.left-panel {
+  pointer-events: none;
+}
+
+.content {
+  color: #fff;
+  transition: 1.1s ease-in-out;
+  transition-delay: 0.5s;
+}
+
+.panel h3 {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.panel p {
+  font-size: 15px;
+  padding: 10px 0;
+}
+
+.image {
+  width: 100%;
+  transition: 1.1s ease-in-out;
+  transition-delay: 0.4s;
+}
+
+.left-panel .image,
+.left-panel .content {
+  transform: translateX(-200%);
+}
+
+.right-panel .image,
+.right-panel .content {
+  transform: translateX(0);
+}
+
+.account-text {
   display: none;
 }
 
-@media screen and (max-width: 850px) {
-  main {
-    margin-top: 50px;
+/*Animation*/
+
+.container.sign-up-mode::before {
+  transform: translateX(0);
+}
+
+.container.sign-up-mode .right-panel .image,
+.container.sign-up-mode .right-panel .content {
+  transform: translateX(200%);
+}
+
+.container.sign-up-mode .left-panel .image,
+.container.sign-up-mode .left-panel .content {
+  transform: translateX(0);
+}
+
+.container.sign-up-mode form.sign-in-form {
+  opacity: 0;
+}
+
+.container.sign-up-mode form.sign-up-form {
+  opacity: 1;
+}
+
+.container.sign-up-mode .right-panel {
+  pointer-events: none;
+}
+
+.container.sign-up-mode .left-panel {
+  pointer-events: all;
+}
+
+/*Responsive*/
+
+@media (max-width: 779px) {
+  .container {
+    width: 100vw;
+    height: 100vh;
   }
+}
 
-  .caja__trasera {
-    max-width: 350px;
-    height: 300px;
-    flex-direction: column;
-    margin: auto;
+@media (max-width: 635px) {
+  .container::before {
+    display: none;
   }
-
-  .caja__trasera div {
-    margin: 0px;
-    position: absolute;
+  form {
+    width: 80%;
   }
-
-  /*Formularios*/
-
-  .contenedor__login-register {
-    top: -10px;
-    left: -5px;
-    margin: auto;
+  form.sign-up-form {
+    display: none;
   }
+  .container.sign-up-mode2 form.sign-up-form {
+    display: flex;
+    opacity: 1;
+  }
+  .container.sign-up-mode2 form.sign-in-form {
+    display: none;
+  }
+  .panels-container {
+    display: none;
+  }
+  .account-text {
+    display: initial;
+    margin-top: 30px;
+  }
+}
 
-  .contenedor__login-register form {
-    position: relative;
+@media (max-width: 320px) {
+  form {
+    width: 90%;
   }
 }
