--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -2,59 +2,137 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Logino</title>
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <link
       rel="icon"
       type="image/x-icon"
       href="../../../assets/img/logpestañapryect.png"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-
     <link rel="stylesheet" href="login.component.css" />
+    <title>signin-signup</title>
   </head>
+
   <body>
-    <main>
-      <div class="contenedor__todo">
-        <div class="caja__trasera">
-          <div class="caja__trasera-login">
-            <h3>¿Ya tienes una cuenta?</h3>
-            <p>Inicia sesión para entrar en la página</p>
-            <button id="btn__iniciar-sesion">Iniciar Sesión</button>
+    <div class="container">
+      <div class="signin-signup">
+        <form action="" class="sign-in-form">
+          <h2 class="title">Sign in</h2>
+          <div class="input-field">
+            <i class="fas fa-user"></i>
+            <input type="text" placeholder="Username" />
           </div>
-          <div class="caja__trasera-register">
-            <h3>¿Aún no tienes una cuenta?</h3>
-            <p>Regístrate para que puedas iniciar sesión</p>
-            <button id="btn__registrarse">Regístrarse</button>
+          <div class="input-field">
+            <i class="fas fa-lock"></i>
+            <input type="password" placeholder="Password" />
           </div>
+          <input type="submit" value="Login" class="btn" />
+          <p class="social-text">Or Sign in with social platform</p>
+          <div class="social-media">
+            <a href="#" class="social-icon">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a href="" class="social-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="social-icon">
+              <i class="fab fa-google"></i>
+            </a>
+            <a href="" class="social-icon">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </div>
+          <p class="account-text">
+            Don't have an account? <a href="#" id="sign-up-btn2">Sign up</a>
+          </p>
+        </form>
+        <form action="" class="sign-up-form">
+          <h2 class="title">Sign up</h2>
+          <div class="input-field">
+            <i class="fas fa-user"></i>
+            <input type="text" placeholder="Username" />
+          </div>
+          <div class="input-field">
+            <i class="fas fa-envelope"></i>
+            <input type="text" placeholder="Email" />
+          </div>
+          <div class="input-field">
+            <i class="fas fa-lock"></i>
+            <input type="password" placeholder="Password" />
+          </div>
+          <input type="submit" value="Sign up" class="btn" />
+          <p class="social-text">Or Sign in with social platform</p>
+          <div class="social-media">
+            <a href="#" class="social-icon">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a href="" class="social-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="social-icon">
+              <i class="fab fa-google"></i>
+            </a>
+            <a href="" class="social-icon">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </div>
+          <p class="account-text">
+            Already have an account? <a href="#" id="sign-in-btn2">Sign in</a>
+          </p>
+        </form>
+      </div>
+      <div class="panels-container">
+        <div class="panel left-panel">
+          <div class="content">
+            <h3>Member of Brand?</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+              accusantium dolor, eos incidunt minima iure?
+            </p>
+            <button class="btn" id="sign-in-btn">
+              Sign in
+              <div class="arrow-wrapper">
+                <br />
+                <div class="arrow"></div>
+              </div>
+            </button>
+          </div>
+          <img src="../../../assets/img/registar.png" alt="" class="image" />
         </div>
+        <div class="panel right-panel">
+          <div class="content">
+            <h3>New to Brand?</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+              accusantium dolor, eos incidunt minima iure?
+            </p>
+            <button
+              class="btn"
+              id="sign-up-btn"
+              style="position: relative; right: -1em"
+            >
+              Sign up
 
-        <!--Formulario de Login y registro-->
-        <div class="contenedor__login-register">
-          <!--Login-->
-          <form action="" class="formulario__login">
-            <h2>Iniciar Sesión</h2>
-            <input type="text" placeholder="Correo Electronico" />
-            <input type="password" placeholder="Contraseña" />
-            <button>Entrar</button>
-          </form>
-
-          <!--Register-->
-          <form action="" class="formulario__register">
-            <h2>Regístrarse</h2>
-            <input type="text" placeholder="Nombre completo" />
-            <input type="text" placeholder="Correo Electronico" />
-            <input type="text" placeholder="Usuario" />
-            <input type="password" placeholder="Contraseña" />
-            <button>Regístrarse</button>
-          </form>
+              <div class="arrow-wrapper">
+                <br />
+                <div class="arrow"></div>
+              </div>
+            </button>
+          </div>
+          <img
+            src="../../../assets/img/Computer login-bro.png"
+            alt=""
+            class="image"
+          />
         </div>
       </div>
-    </main>
-
+    </div>
     <script src="../../../assets/Js/scriplogin.js"></script>
   </body>
 </html>
