--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,244 @@
-<!-- boton que desliza para arriba -->
+<header class="header">
+  <a href="#" class="logo"> HealthTest. </a>
 
+  <nav class="navbar" style="right: -18em; position: relative">
+    <a href="#home">home</a>
+    <a href="#services">Nuestros Servicios</a>
+    <a href="#about">Sobre Nosotros</a>
+    <a href="#doctors">Creadores</a>
+    <a href="#book">Contactos</a>
+    <a href="#review">review</a>
+    <a href="#blogs">Blogs</a>
+  </nav>
+
+  <div id="menu-btn" class="fas fa-bars"></div>
+</header>
+
+<!-- header section ends -->
+
+<!-- home section starts  -->
+
+<section class="home" id="home">
+  <div class="image">
+    <img src="../assets/img/Logo3PrName.png" alt="" />
+  </div>
+
+  <div class="content">
+    <h3>bienvenido a HealthTest</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sed autem
+      vero? Magnam, est laboriosam!
+    </p>
+    <a href="#" class="btn">
+      contact us <span class="fas fa-chevron-right"></span>
+    </a>
+  </div>
+</section>
+
+<!-- home section ends -->
+
+<!-- icons section starts  -->
+
+<section class="icons-container">
+  <div class="icons">
+    <i class="fas fa-user-md"></i>
+    <h3>140+</h3>
+    <p>doctors at work</p>
+  </div>
+
+  <div class="icons">
+    <i class="fas fa-users"></i>
+    <h3>1040+</h3>
+    <p>satisfied patients</p>
+  </div>
+
+  <div class="icons">
+    <i class="fas fa-procedures"></i>
+    <h3>500+</h3>
+    <p>bed facility</p>
+  </div>
+
+  <div class="icons">
+    <i class="fas fa-hospital"></i>
+    <h3>80+</h3>
+    <p>available hospitals</p>
+  </div>
+</section>
+
+<!-- icons section ends -->
+
+<!-- services section starts  -->
+
+<section class="services" id="services">
+  <h1 class="heading">Nuestros <span>Servicios</span></h1>
+
+  <div class="box-container">
+    <div class="box">
+      <i class="fas fa-notes-medical"></i>
+      <h3>free checkups</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
+      </p>
+      <a href="#" class="btn">
+        learn more <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+
+    <div class="box">
+      <i class="fas fa-ambulance"></i>
+      <h3>24/7 ambulance</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
+      </p>
+      <a href="#" class="btn">
+        learn more <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+
+    <div class="box">
+      <i class="fas fa-user-md"></i>
+      <h3>expert doctors</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
+      </p>
+      <a href="#" class="btn">
+        learn more <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+
+    <div class="box">
+      <i class="fas fa-pills"></i>
+      <h3>medicines</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
+      </p>
+      <a href="#" class="btn">
+        learn more <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+
+    <div class="box">
+      <i class="fas fa-procedures"></i>
+      <h3>bed facility</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
+      </p>
+      <a href="#" class="btn">
+        learn more <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+
+    <div class="box">
+      <i class="fas fa-heartbeat"></i>
+      <h3>total care</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
+      </p>
+      <a href="#" class="btn">
+        learn more <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+  </div>
+</section>
+
+<!-- services section ends -->
+
+<!-- about section starts  -->
+
+<section class="about" id="about">
+  <h1 class="heading"><span>Sobre</span> Nosotros</h1>
+
+  <div class="row">
+    <div class="image">
+      <img src="image/about-img.svg" alt="" />
+    </div>
+
+    <div class="content">
+      <h3>we take care of your healthy life</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure ducimus,
+        quod ex cupiditate ullam in assumenda maiores et culpa odit tempora
+        ipsam qui, quisquam quis facere iste fuga, minus nesciunt.
+      </p>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus vero
+        ipsam laborum porro voluptates voluptatibus a nihil temporibus deserunt
+        vel?
+      </p>
+      <a href="#" class="btn">
+        learn more <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+  </div>
+</section>
+
+<!-- about section ends -->
+
+<!-- review section starts  -->
+
+<section class="review" id="review">
+  <h1 class="heading">client's <span>review</span></h1>
+
+  <div class="box-container">
+    <div class="box">
+      <img src="image/pic-1.png" alt="" />
+      <h3>john deo</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star-half-alt"></i>
+      </div>
+      <p class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+        sapiente nihil aperiam? Repellat sequi nisi aliquid perspiciatis libero
+        nobis rem numquam nesciunt alias sapiente minus voluptatem, reiciendis
+        consequuntur optio dolorem!
+      </p>
+    </div>
+
+    <div class="box">
+      <img src="image/pic-2.png" alt="" />
+      <h3>john deo</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star-half-alt"></i>
+      </div>
+      <p class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+        sapiente nihil aperiam? Repellat sequi nisi aliquid perspiciatis libero
+        nobis rem numquam nesciunt alias sapiente minus voluptatem, reiciendis
+        consequuntur optio dolorem!
+      </p>
+    </div>
+
+    <div class="box">
+      <img src="image/pic-3.png" alt="" />
+      <h3>john deo</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star-half-alt"></i>
+      </div>
+      <p class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+        sapiente nihil aperiam? Repellat sequi nisi aliquid perspiciatis libero
+        nobis rem numquam nesciunt alias sapiente minus voluptatem, reiciendis
+        consequuntur optio dolorem!
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- review section ends -->
+
+<!-- boton que desliza para arriba -->
 <span class="arriba bx bxs-up-arrow"></span>
 <!-- Fin del boton que desliza para arriba -->
 
@@ -247,6 +486,7 @@
 </div>
 <!-- ========== Inicio del bloG========== -->
 
+<section class="blog" id="blogs"></section>
 <div class="blog-section wf-section" style="background: #f0e68c">
   <div class="wrapper blog-homepage">
     <div class="blog-heading-and-subtext-wrapper">
@@ -254,7 +494,7 @@
         <h6>Blogs</h6>
       </div>
       <div class="blog-heading-wrapper">
-        <h2>Latest Blogs</h2>
+        <h2>Ultimos Blogs</h2>
       </div>
       <br />
       <div class="loadindroedor">
@@ -293,26 +533,51 @@
           <div role="listitem" class="w-dyn-item">
             <a
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="/blog/design-tips-for-designers-that-cover-everything-you-need"
+              href="https://www.anahana.com/es/mental-health/stress-management-for-teens#:~:text=Por%20lo%20tanto%2C%20las%20mejores%20herramientas%20que%20un,comenzar.%20%C2%BFQu%C3%A9%20causa%20la%20ansiedad%20en%20los%20adolescentes%3F"
               class="blog-section-blog-item-wrapper w-inline-block"
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div>
-                  <div class="text-block">April 16, 2021</div>
+                  <div class="text-block">Agosto 23, 2021</div>
+                </div>
+              </div>
+              <div class="blog-item-heading-wrapper">
+                <h4>MANEJO DEL ESTRÉS PARA ADOLESCENTES</h4>
+              </div>
+              <div class="blog-item-read-the-article-wrapper">
+                <div class="blog-item-read-the-article-text-wrapper">
+                  <div class="text-block">Leer el articulo</div>
+                </div>
+                <div class="blog-item-arrow-wrapper">
+                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div role="listitem" class="w-dyn-item">
+            <a
+              data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
+              href="https://www.biobiochile.cl/noticias/blogs/blog-ubo/2020/12/23/efecto-de-pandemia-de-covid-19-trastorno-de-estres-postraumatico-en-el-cerebro-de-los-adolescentes.shtml"
+              class="blog-section-blog-item-wrapper w-inline-block"
+            >
+              <div class="blog-item-date-and-time-wrapper">
+                <div class="blog-item-date-wrapper">
+                  <div class="text-block">Diciembre 23, 2020</div>
                 </div>
                 <div class="blog-item-dot"></div>
                 <div class="blog-item-time-wrapper">
-                  <div class="text-block">6 mins</div>
+                  <div class="text-block">12:28</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
                 <h4>
-                  Design tips for designers, that cover everything you need
+                  Efecto de pandemia de covid-19: trastorno de estrés
+                  postraumático en el cerebro de los adolescentes
                 </h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
                 <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block">Read the article</div>
+                  <div class="text-block">Leer el articulo</div>
                 </div>
                 <div class="blog-item-arrow-wrapper">
                   <i class="fa-solid fa-arrow-right arrowrigtht"></i>
@@ -323,24 +588,24 @@
           <div role="listitem" class="w-dyn-item">
             <a
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="/blog/how-to-build-rapport-with-your-web-design-clients"
+              href="https://blog.up.edu.mx/prepaup/femenil/tecnicas-para-combatir-el-estres-en-la-adolescencia"
               class="blog-section-blog-item-wrapper w-inline-block"
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
-                  <div class="text-block">April 16, 2021</div>
+                  <div class="text-block">Mayo 26, 2021</div>
                 </div>
                 <div class="blog-item-dot"></div>
                 <div class="blog-item-time-wrapper">
-                  <div class="text-block">5 mins</div>
+                  <div class="text-block">15:00</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
-                <h4>How to build rapport with your web design clients</h4>
+                <h4>Técnicas para combatir el estrés en la adolescencia</h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
                 <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block">Read the article</div>
+                  <div class="text-block">Leer el articulo</div>
                 </div>
                 <div class="blog-item-arrow-wrapper">
                   <i class="fa-solid fa-arrow-right arrowrigtht"></i>
@@ -351,24 +616,20 @@
           <div role="listitem" class="w-dyn-item">
             <a
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="/blog/top-6-free-website-mockup-tools-2021"
+              href="https://kidshealth.org/SeattleCH/es/parents/stress.html"
               class="blog-section-blog-item-wrapper w-inline-block"
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
-                  <div class="text-block">April 16, 2021</div>
-                </div>
-                <div class="blog-item-dot"></div>
-                <div class="blog-item-time-wrapper">
-                  <div class="text-block">5 mins</div>
+                  <div class="text-block">Abril, 2022</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
-                <h4>Top 6 free website mockup tools 2021</h4>
+                <h4>Estrés infantil: Cómo pueden ayudar los padres</h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
                 <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block">Read the article</div>
+                  <div class="text-block">Leer el articulo</div>
                 </div>
                 <div class="blog-item-arrow-wrapper">
                   <i class="fa-solid fa-arrow-right arrowrigtht"></i>
@@ -379,52 +640,20 @@
           <div role="listitem" class="w-dyn-item">
             <a
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="/blog/logo-design-trends-to-avoid-in-2021"
+              href="https://www.elesquiu.com/curiosidades/2022/12/31/estres-actividades-que-ayudan-superarlo-460982.html"
               class="blog-section-blog-item-wrapper w-inline-block"
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
-                  <div class="text-block">April 16, 2021</div>
-                </div>
-                <div class="blog-item-dot"></div>
-                <div class="blog-item-time-wrapper">
-                  <div class="text-block">7 mins</div>
+                  <div class="text-block">Diciembre 31, 2022</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
-                <h4>Logo design trends to avoid in 2021</h4>
+                <h4>Estrés: 6 actividades que ayudan a superarlo</h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
                 <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block">Read the article</div>
-                </div>
-                <div class="blog-item-arrow-wrapper">
-                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div role="listitem" class="w-dyn-item">
-            <a
-              data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="/blog/22-best-ui-design-tools"
-              class="blog-section-blog-item-wrapper w-inline-block"
-            >
-              <div class="blog-item-date-and-time-wrapper">
-                <div class="blog-item-date-wrapper">
-                  <div class="text-block">April 16, 2021</div>
-                </div>
-                <div class="blog-item-dot"></div>
-                <div class="blog-item-time-wrapper">
-                  <div class="text-block">7 mins</div>
-                </div>
-              </div>
-              <div class="blog-item-heading-wrapper">
-                <h4>22 best UI design tools</h4>
-              </div>
-              <div class="blog-item-read-the-article-wrapper">
-                <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block">Read the article</div>
+                  <div class="text-block">Leer el articulo</div>
                 </div>
                 <div class="blog-item-arrow-wrapper">
                   <i class="fa-solid fa-arrow-right arrowrigtht"></i>
@@ -437,3 +666,40 @@
     </div>
   </div>
 </div>
+
+<!-- FIN DEL BLOG  -->
+
+<!-- doctors section starts  -->
+
+<section class="doctors" id="doctors">
+  <h1 class="heading"><span>Creadores</span></h1>
+  <h3 class="heading">¡Hola Nos Presentamos!</h3>
+
+  <div class="box-container">
+    <div class="box">
+      <img src="../assets/img/FotoPerfilDonald.png" alt="" />
+      <h3>Donald David Silva Sánchez</h3>
+      <span>expert doctor</span>
+      <div class="share">
+        <a href="#" class="fab fa-facebook-f"></a>
+        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-linkedin"></a>
+      </div>
+    </div>
+
+    <div class="box">
+      <img src="../assets/img/Perfilelvis.png" alt="" />
+      <h3>Elvis Luis Gonzales Acosta</h3>
+      <span>expert doctor</span>
+      <div class="share">
+        <a href="#" class="fab fa-facebook-f"></a>
+        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-linkedin"></a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- doctors section ends -->
