--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -10,6 +10,11 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <!-- ========== WebFont ========== -->
+    <script
+      src="https://kit.fontawesome.com/18096001b9.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="icon"
       type="image/x-icon"
@@ -23,17 +28,17 @@
     <div class="container">
       <div class="signin-signup">
         <form action="" class="sign-in-form">
-          <h2 class="title">Sign in</h2>
+          <h2 class="title">Iniciar Sesión</h2>
           <div class="input-field">
             <i class="fas fa-user"></i>
-            <input type="text" placeholder="Username" />
+            <input type="text" placeholder="Usuario" />
           </div>
           <div class="input-field">
             <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Password" />
+            <input type="password" placeholder="Contraseña" />
           </div>
-          <input type="submit" value="Login" class="btn" />
-          <p class="social-text">Or Sign in with social platform</p>
+          <input type="submit" value="Acceder" class="btn" />
+          <p class="social-text">O Iniciar Sesión con la Plataforma Social</p>
           <div class="social-media">
             <a href="#" class="social-icon">
               <i class="fab fa-facebook"></i>
@@ -48,15 +53,16 @@
               <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
-          <p class="account-text">
-            Don't have an account? <a href="#" id="sign-up-btn2">Sign up</a>
-          </p>
         </form>
         <form action="" class="sign-up-form">
-          <h2 class="title">Sign up</h2>
+          <h2 class="title">Regístrarse</h2>
+          <div class="input-field">
+            <i class="fa-solid fa-user-tie"></i>
+            <input type="text" placeholder="Nombre Completo" />
+          </div>
           <div class="input-field">
             <i class="fas fa-user"></i>
-            <input type="text" placeholder="Username" />
+            <input type="text" placeholder="Usuario" />
           </div>
           <div class="input-field">
             <i class="fas fa-envelope"></i>
@@ -64,10 +70,10 @@
           </div>
           <div class="input-field">
             <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Password" />
+            <input type="password" placeholder="Contraseña" />
           </div>
-          <input type="submit" value="Sign up" class="btn" />
-          <p class="social-text">Or Sign in with social platform</p>
+          <input type="submit" value="Regístrarse" class="btn" />
+          <p class="social-text">O Iniciar Sesión con la Plataforma Social</p>
           <div class="social-media">
             <a href="#" class="social-icon">
               <i class="fab fa-facebook"></i>
@@ -90,13 +96,10 @@
       <div class="panels-container">
         <div class="panel left-panel">
           <div class="content">
-            <h3>Member of Brand?</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-              accusantium dolor, eos incidunt minima iure?
-            </p>
+            <h3>¿Ya tienes una cuenta en HealthTest?</h3>
+            <p>Te ofrecemos Iniciar Sesión para acceder a nuestra página.</p>
             <button class="btn" id="sign-in-btn">
-              Sign in
+              Iniciar Sesión
               <div class="arrow-wrapper">
                 <br />
                 <div class="arrow"></div>
@@ -107,17 +110,15 @@
         </div>
         <div class="panel right-panel">
           <div class="content">
-            <h3>New to Brand?</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-              accusantium dolor, eos incidunt minima iure?
-            </p>
+            <br />
+            <h3>¿Aún no tienes una cuenta en HealthTest?</h3>
+            <p>Te invitamos a registrate para que puedas Iniciar Sesión.</p>
             <button
               class="btn"
               id="sign-up-btn"
               style="position: relative; right: -1em"
             >
-              Sign up
+              Regístrarse
 
               <div class="arrow-wrapper">
                 <br />
